--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-nodeunit": "^0.3.3",
+    "grunt-contrib-jshint": "~0.9.2",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-nodeunit": "~0.3.3",
     "grunt": "~0.4.5",
-    "concat-stream": "^1.4.6"
+    "concat-stream": "~1.4.6"
   },
   "peerDependencies": {
     "grunt": "~0.4.0"
@@ -40,7 +40,7 @@
     "tar", "targz", "tgz", "tarball", "decompress"
   ],
   "dependencies": {
-    "async": "^0.9.0",
-    "tar": "^0.1.19"
+    "async": "~0.9.0",
+    "tar": "~0.1.19"
   }
 }
